fix grid width overflow on ios

--- a/src/app/styles/pages/Home/components/Board.module.scss
+++ b/src/app/styles/pages/Home/components/Board.module.scss
@@ -2,7 +2,7 @@
 
 $cell_width: (
   desktop: 70vh,
-  mobile: 90vw,
+  mobile: 85vw,
 );
 
 .boardContainer {
@@ -28,12 +28,15 @@ $cell_width: (
   .cell {
     border: 3px solid #ffffff;
     background-color: unset;
-    font-size: 8rem;
+    font-size: 10rem;
     width: 100%;
     height: 100%;
+    display: grid;
+    place-content: center;
+    font-stretch: extra-expanded;
 
     @include mobile-all {
-      font-size: 5rem;
+      font-size: 4.5rem;
     }
 
     &--0 {
